--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,17 @@ body {
   overflow-x: hidden;
 }
 
+body::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  z-index: -1;
+  opacity: 0.75;
+  width: 100%;
+  height: 100vh;
+  background-color: white;
+}
+
 .background {
   background-image: url(styleimages/gradientbackground.jpeg);
   background-color: #7d3887;
